# cicero

./: .better-commits.json  .dockerignore  .gitignore  Cargo.toml  Dockerfile  LICENSE  LICENSE-APACHE  LICENSE-MIT  README.md  TODO.md  docker-swarm.yml  dockerfile  leptosfmt.toml  package-lock.json  rustfmt.toml
.devcontainer/: .env  compose.yml
.devcontainer/backend/: Dockerfile  devcontainer.json
.devcontainer/frontend/: Dockerfile  devcontainer.json
.github/workflows/: ci.yaml  ci.yml  primary.yml
config/: development.yaml  test.yaml
crates/cicero/: Cargo.toml  README.md
crates/cicero-app/: Cargo.toml
crates/cicero-app/src/: error_template.rs  lib.rs
crates/cicero-app/src/pages/: contact.rs  contacts.rs  index.rs  mains.rs  mod.rs  scenario.rs  scenario_choice.rs  scenario_step.rs  step_template.rs  template_choice.rs
crates/cicero-app/src/shared/: api.rs  data.rs  mod.rs  server.rs
crates/cicero-app/src/widgets/: all_step.rs  choice_a_dogovor.rs  choice_a_election_dogovor.rs  entity_input.rs  enum_input.rs  html_enum_render.rs  html_render.rs  input_data_step.rs  layout.rs  layout_choice_dogovor.rs  layout_nav.rs  mod.rs  navbar.rs  preview.rs  right_side.rs  scenario_description.rs  scenarios_overview.rs  search_bar.rs  step_input.rs  string_input.rs  struct_input.rs
crates/cicero-app/src/widgets/input/: array_input.rs  entity_input.rs  enum_input.rs  mod.rs  phone_input.rs  place_input.rs  string_enum_input.rs  string_input.rs  struct_input.rs
crates/cicero-app/src/widgets/layout/: header.rs  mod.rs
crates/cicero-dsl/: Cargo.toml
crates/cicero-dsl/src/: data.rs  lib.rs  std_lib.rs  types.rs
crates/cicero-dsl/src/compiler/: mod.rs
crates/cicero-dsl/src/compiler/parse_types/: ast.rs  grammar.rs  lexer.rs  mod.rs
crates/cicero-dsl/src/compiler/types/: grammar.rs  mod.rs  resolver.rs
crates/cicero-dsl/src/data/: ast.rs  expr.rs  mod.rs
crates/cicero-dsl/src/render/: context.rs  mod.rs
crates/cicero-dsl/src/render/compiler/: mod.rs
crates/cicero-dsl/src/render/compiler/cicero/: ast.rs  grammar.rs  lexer.rs  mod.rs  resolver.rs
crates/cicero-dsl/src/render/compiler/template/: ast.rs  grammar.rs  mod.rs  resolver.rs
crates/cicero-dsl/src/render/scenario/: context.rs  error.rs  mod.rs
crates/cicero-dsl/src/types/: mod.rs  render.rs
crates/cicero-e2e/: example.spec.ts  package-lock.json  package.json  playwright.config.ts
crates/cicero-e2e/playwright-report/: index.html
crates/cicero-e2e/tests-examples/: demo-todo-app.spec.ts
crates/cicero-front/: Cargo.toml  package-lock.json  package.json  tailwind.config.js
crates/cicero-front/src/: lib.rs
crates/cicero-front/style/: output.css  tailwind.css
crates/cicero-server/: Cargo.toml
crates/cicero-server/src/: fileserv.rs  main.rs
crates/cicero/end2end/: playwright.config.ts
crates/cicero/end2end/tests/: example.spec.ts
crates/cicero/src/: app.rs  fileserv.rs  lib.rs  main.rs
crates/cicero/style/: main.scss
docs/: cicero-dsl.ru.md
dsl/: Cargo.toml
dsl/src/: lib.rs  types.rs
dsl/src/compiler/: ast.rs  grammar.rs  lexer.rs  mod.rs  resolver.rs
examples/: playground.rs
examples/0/: meta.toml  reference.docx  rendered.docx  template.tex.j2  types.cicero
examples/test/: meta.toml  template.tex.j2  types.cicero
examples/Договор-купли-продажи-фл/: meta.toml  template.tex.j2  types.cicero
frontend/: .dockerignore  .gitignore  Dockerfile  biome.json  bun.lockb  oxlintrc.json  package-lock.json  package.json  postcss.config.js  rsbuild.config.ts  tailwind.config.js  tsconfig.json  tsconfig.node.json
frontend/.husky/: pre-commit
frontend/src/: global.css  index.tsx  routeTree.gen.ts  router.tsx
frontend/src/api/: config.ts
frontend/src/hooks/: AuthProvider.tsx
frontend/src/routes/: __root.module.css  __root.tsx
frontend/src/routes/-api/dtos/: User.dto.ts
frontend/src/routes/constructor/$templateId/: route.module.css  route.tsx
frontend/src/routes/constructor/$templateId/-api/: constructor.api.ts
frontend/src/routes/constructor/$templateId/cssInputs/: data-input.module.css  number-input.module.css  radio-input.module.css  string-input.module.css
frontend/src/routes/index/: route.module.css  route.tsx
frontend/src/routes/login/: route.module.css  route.tsx
frontend/src/routes/login/-api/: login.api.ts
frontend/src/routes/login/-api/dtos/: Login.dto.ts  LoginResponse.dto.ts
frontend/src/routes/lostPassword/: route.tsx
frontend/src/routes/register/: route.module.css  route.tsx
frontend/src/routes/register/-api/dtos/: Register.dto.ts
frontend/src/routes/reset/: route.tsx
frontend/src/routes/templates/: route.module.css  route.tsx
frontend/src/routes/templates/$templateId/: route.module.css  route.tsx
frontend/src/routes/templates/-api/: templates.api.ts
frontend/src/routes/templates/new/: route.tsx
frontend/src/routes/verify/: route.tsx
healthcheck/: Cargo.toml
healthcheck/src/: main.rs
migration/: Cargo.toml
migration/src/: lib.rs  m20220101_000001_users.rs  m20240827_164857_templates.rs  m20240827_165252_categories.rs  m20240827_165502_templates_categories.rs  m20240827_171617_users_visible_templates.rs
src/: app.rs  lib.rs
src/controllers/: auth.rs  mod.rs  templates.rs  user.rs
src/fixtures/test/: categories.yaml  templates.yaml  templates_categories.yaml  users.yaml
src/mailers/: auth.rs
src/mailers/auth/welcome/: html.t  subject.t  text.t
src/middlewares/: maybe_auth.rs  mod.rs
src/models/: categories.rs  mod.rs  templates.rs  templates_categories.rs  users.rs  users_visible_templates.rs
src/models/_entities/: categories.rs  mod.rs  prelude.rs  templates.rs  templates_categories.rs  users.rs  users_visible_templates.rs
src/tasks/: seed.rs
src/views/: attachment.rs  auth.rs  category.rs  mod.rs  template.rs  user.rs
tests/models/: mod.rs  users.rs  users_visible_templates.rs
tests/requests/: auth.rs  mod.rs  prepare_data.rs  templates.rs  user.rs
tests/requests/snapshots/: can_login_without_verify@auth_request.snap  login_with_valid_password@auth_request.snap
tests/tasks/: seed.rs
(+5 files in other folders)
