[workspace]
resolver = "2"

[workspace.package]
edition = "2021"

[package]
name = "cicero"
version = "0.1.0"
edition.workspace = true
publish = false
default-run = "cicero-cli"

[workspace.dependencies]
loco-rs = { version = "0.13.2" }
serde = { version = "1" }
thiserror = "2.0.3"

[dependencies]
loco-rs = { workspace = true }
serde = { workspace = true, features = ["derive"] }
serde_json = "1"
tokio = { version = "1.41.1", default-features = false, features = [
    "rt-multi-thread",
] }
async-trait = "0.1.83"
axum = { version = "0.7.9", features = ["multipart"] }
axum-extra = { version = "0.9.6", features = ["attachment"] }
tracing = "0.1.40"
tracing-subscriber = { version = "0.3.18", features = ["env-filter", "json"] }
migration = { path = "migration" }
sea-orm = { version = "1.1.1", features = [
    "sqlx-sqlite",
    "sqlx-postgres",
    "runtime-tokio-rustls",
    "macros",
] }
chrono = "0.4.38"
validator = { version = "0.18.1" }
uuid = { version = "1.11.0", features = ["v4"] }
include_dir = "0.7.4"

cicero-dsl = { path = "dsl" }

[[bin]]
name = "cicero-cli"
path = "src/bin/main.rs"
required-features = []

[dev-dependencies]
loco-rs = { workspace = true, features = ["testing"] }
serial_test = "3.1.1"
rstest = "0.23.0"
insta = { version = "1.41.1", features = ["redactions", "yaml", "filters"] }
