[package]
name = "cicero-dsl"
version = "0.1.0"
description = "Data for Cicero DSL: types, schemas, and more."
edition = "2021"

[dependencies]
serde = { workspace = true, features = ["derive"] }
indexmap = { version = "2.4.0", features = ["serde"] }
chumsky = { version = "1.0.0-alpha.6", features = [
    "nightly",
    "label",
    "memoization",
    "spin",
    "sync",
] }
logos = { version = "0.14.0"}
thiserror = { workspace = true }
pulldown-cmark = { version = "0.12.0" }

[dev-dependencies]
tempfile = "3.12.0"
