[package]
name = "healthcheck"
version = "0.1.0"
edition.workspace = true

[dependencies]
tokio = { workspace = true, default-features = false, features = ["rt-multi-thread", "macros"] }
reqwest = { version = "0.12.9", default-features = false, features = ["json"] }
serde = { workspace = true, features = ["derive"] }