[package]
name = "cicero-dsl"
version = "0.1.0"
description = "Data for Cicero DSL: types, schemas, and more."
homepage.workspace = true
repository.workspace = true
authors.workspace = true
readme.workspace = true
license.workspace = true
edition.workspace = true

[features]
render = ["dep:minijinja"]

[dependencies]
serde = { workspace = true, features = ["derive", "rc"] }
indexmap.workspace = true
minijinja = { version = "1.0.12", optional = true }

[lints]
workspace = true
