[package]
name = "cicero-dsl"
version = "0.1.0"
description = "Data for Cicero DSL: types, schemas, and more."
homepage.workspace = true
repository.workspace = true
authors.workspace = true
readme.workspace = true
license.workspace = true
edition.workspace = true

[features]
render = ["dep:minijinja", "dep:chumsky", "dep:logos"]

[dependencies]
serde = { workspace = true, features = ["derive"] }
indexmap.workspace = true
minijinja = { version = "1.0.12", optional = true }
chumsky = { version = "1.0.0-alpha.6", features = [
    "nightly",
    "label",
    "memoization",
    "spin",
    "sync",
], optional = true }
logos = { version = "0.13.0", optional = true }

[lints]
workspace = true
