[package]
name = "cicero-dsl"
version = "0.1.0"
description = "Data for Cicero DSL: types, schemas, and more."
homepage.workspace = true
repository.workspace = true
authors.workspace = true
readme.workspace = true
license.workspace = true
edition.workspace = true

[features]
render = [
    "dep:minijinja",
    "dep:chumsky",
    "dep:logos",
    "dep:toml",
    "dep:thiserror",
    "dep:pulldown-cmark",
]

[dependencies]
serde = { workspace = true, features = ["derive"] }
indexmap.workspace = true
minijinja = { version = "1.0.12", optional = true }
chumsky = { version = "1.0.0-alpha.6", features = [
    "nightly",
    "label",
    "memoization",
    "spin",
    "sync",
], optional = true }
logos = { version = "0.14.0", optional = true }
toml = { version = "0.8.12", optional = true }
thiserror = { workspace = true, optional = true }
pulldown-cmark = { version = "0.10.2", optional = true }

[dev-dependencies]
tempfile.workspace = true

[lints]
workspace = true
