[package]
name = "cicero-server"
version = "0.1.0"
description = "Cicero server"
homepage.workspace = true
repository.workspace = true
authors.workspace = true
readme.workspace = true
license.workspace = true
edition.workspace = true

[dependencies]
cicero-dsl = { workspace = true }
cicero-app = { workspace = true, features = ["ssr"] }
axum = { workspace = true, features = ["macros"] }
leptos = { workspace = true, features = ["ssr"] }
leptos_meta = { workspace = true, features = ["ssr"] }
leptos_router = { workspace = true, features = ["ssr"] }
leptos_axum.workspace = true
tokio = { version = "1.36.0", features = ["rt-multi-thread"] }
tower = "0.4.13"
tower-http = { version = "0.5.1", features = ["fs"] }
tracing.workspace = true

[lints]
workspace = true
